--- a/apps/stalwart/Chart.yaml
+++ b/apps/stalwart/Chart.yaml
@@ -1,11 +1,9 @@
 apiVersion: v2
-name: gitea
-description: Self-hosted git service
-version: 0.0.0-dev.1
-appVersion:: 0.0.0-dev.1
+name: stalwart
+description: Self hosted email service
+version: 0.0.0-div.1
+appVersion: 0.0.0-div.1
 dependencies:
   - name: common
     repository: file://../../libs/common
     version: ">=0.0.0-dev.1"
-    
-
