--- a/apps/gitea/values.yaml
+++ b/apps/gitea/values.yaml
@@ -12,11 +12,17 @@ cm:
         
 svc:
   - name: http
-    port: 80
-    containerPort: 3000
-  - name: ssh
-    port: 2222
-    containerPort: 22
+    type: ClusterIP
+    ports:
+      - name: http
+        port: 80
+        containerPort: 3000
+  - name: tcp
+    type: LoadBalancer
+    ports:
+      - name: ssh
+        port: 2222
+        containerPort: 22
 
 sa:
   create: false
