--- a/apps/stalwart/Chart.yaml
+++ b/apps/stalwart/Chart.yaml
@@ -1,9 +1,10 @@
 apiVersion: v2
 name: stalwart
 description: Self hosted email service
-version: 0.0.0-div.1
-appVersion: 0.0.0-div.1
+version: 0.0.1
+appVersion: 0.0.1
 dependencies:
   - name: common
     repository: file://../../libs/common
-    version: ">=0.0.0-dev.1"
+    version: 0.0.1
+
