--- a/libs/common/Chart.yaml
+++ b/libs/common/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v2
 name: common
 description: Common helm functions and templates  
 type: library
-version: 0.0.0-dev.1
+version: 0.0.1
