--- a/apps/stalwart/Chart.yaml
+++ b/apps/stalwart/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
 name: stalwart
 description: Self hosted email service
-version: 0.0.1
-appVersion: 0.0.1
+version: 0.0.2
+appVersion: 0.0.2
 dependencies:
   - name: common
-    repository: file://../../libs/common
-    version: 0.0.1
+    repository: https://jon-zuka.github.io/helm-charts
+    version: 0.0.2
 
